--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
 
   <modules>
     <module>step-1</module>
-    <!-- <module>step-2</module> -->
+    <module>step-2</module>
   </modules>
 
 </project>
