--- a/step-1/pom.xml
+++ b/step-1/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
   ~  Copyright (c) 2016 Red Hat, Inc. and/or its affiliates.
+  ~  Copyright (c) 2016 INSA Lyon, CITI Laboratory.
   ~
   ~  Licensed under the Apache License, Version 2.0 (the "License");
   ~  you may not use this file except in compliance with the License.
