--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
     <module>step-2</module>
     <module>step-3</module>
     <module>step-4</module>
+    <module>step-5</module>
   </modules>
 
 </project>
