Gist API integration + reformats

--- a/step-5/src/main/resources/db-queries.properties
+++ b/step-5/src/main/resources/db-queries.properties
@@ -14,10 +14,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-
 create-pages-table=create table if not exists Pages (Id integer identity primary key, Name varchar(255) unique, Content clob)
 get-page=select Id, Content from Pages where Name = ?
 create-page=insert into Pages values (NULL, ?, ?)
 save-page=update Pages set Content = ? where Id = ?
 all-pages=select Name from Pages
 delete-page=delete from Pages where Id = ?
+all-pages-data=select * from Pages
