--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
     <module>step-3</module>
     <module>step-4</module>
     <module>step-5</module>
+    <module>step-6</module>
   </modules>
 
 </project>
