--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
     <module>step-4</module>
     <module>step-5</module>
     <module>step-6</module>
+    <module>step-7</module>
   </modules>
 
 </project>
