--- a/step-2/src/main/resources/db-queries.properties
+++ b/step-2/src/main/resources/db-queries.properties
@@ -15,9 +15,13 @@
 # limitations under the License.
 #
 
+# // tag::queries[]
+
 create-pages-table=create table if not exists Pages (Id integer identity primary key, Name varchar(255) unique, Content clob)
 get-page=select Id, Content from Pages where Name = ?
 create-page=insert into Pages values (NULL, ?, ?)
 save-page=update Pages set Content = ? where Id = ?
 all-pages=select Name from Pages
 delete-page=delete from Pages where Id = ?
+
+# // end::queries[]
