--- a/step-3/pom.xml
+++ b/step-3/pom.xml
@@ -50,10 +50,12 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
     </dependency>
+    <!-- tag::service-proxy-dep[] -->
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-service-proxy</artifactId>
     </dependency>
+    <!-- end::service-proxy-dep[] -->
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web</artifactId>
@@ -77,11 +79,13 @@
       <version>2.3.4</version>
     </dependency>
 
+    <!-- tag::codegen-dep[] -->
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-codegen</artifactId>
       <scope>provided</scope>
     </dependency>
+    <!-- end::codegen-dep[] -->
 
     <dependency>
       <groupId>junit</groupId>
@@ -100,6 +104,7 @@
     <pluginManagement>
       <plugins>
 
+        <!-- tag::codegen[] -->
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.5.1</version>
@@ -107,7 +112,6 @@
             <source>1.8</source>
             <target>1.8</target>
 
-            <!-- Codegen -->
             <annotationProcessors>
               <annotationProcessor>io.vertx.codegen.CodeGenProcessor</annotationProcessor>
             </annotationProcessors>
@@ -118,7 +122,9 @@
 
           </configuration>
         </plugin>
+        <!-- end::codegen[] -->
 
+        <!-- tag::clean[] -->
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
@@ -130,6 +136,7 @@
             </filesets>
           </configuration>
         </plugin>
+        <!-- tag::clean[] -->
 
       </plugins>
     </pluginManagement>
