Some text for step-3

--- a/step-3/pom.xml
+++ b/step-3/pom.xml
@@ -136,7 +136,7 @@
             </filesets>
           </configuration>
         </plugin>
-        <!-- tag::clean[] -->
+        <!-- end::clean[] -->
 
       </plugins>
     </pluginManagement>
