Upgrade to 3.4.0 final

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
     <module>step-5</module>
     <module>step-6</module>
     <module>step-7</module>
+    <module>step-8</module>
   </modules>
 
 </project>
