--- a/step-7/src/main/resources/wiki-users.properties
+++ b/step-7/src/main/resources/wiki-users.properties
@@ -15,6 +15,7 @@
 # limitations under the License.
 #
 
+# tag::props[]
 user.root=w00t,admin
 user.foo=bar,editor,writer
 user.bar=baz,writer
@@ -23,3 +24,4 @@ user.baz=baz
 role.admin=*
 role.editor=create,delete,update
 role.writer=update
+# end::props[]
