--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
     <module>step-6</module>
     <module>step-7</module>
     <module>step-8</module>
+    <module>step-9</module>
   </modules>
 
 </project>
