--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,18 @@
     <module>step-9</module>
   </modules>
 
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.6</version>
+        <configuration>
+          <finalName>docs</finalName>
+          <appendAssemblyId>false</appendAssemblyId>
+          <descriptor>assembly.xml</descriptor>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+
 </project>
