Attach docs.zip to the project

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
         <configuration>
           <descriptor>assembly.xml</descriptor>
         </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
