Moving artifacts to io.vertx

--- a/step-1/pom.xml
+++ b/step-1/pom.xml
@@ -22,7 +22,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.vertx.guides</groupId>
+  <groupId>io.vertx</groupId>
   <artifactId>wiki-step-1</artifactId>
   <version>1.0-SNAPSHOT</version>
 
