--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,8 @@
                              http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>io.vertx.guides</groupId>
-  <artifactId>wiki-guide</artifactId>
+  <groupId>io.vertx</groupId>
+  <artifactId>guide-for-java-devs</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
