--- a/step-3/pom.xml
+++ b/step-3/pom.xml
@@ -138,6 +138,15 @@
         </plugin>
         <!-- end::clean[] -->
 
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.8.2</version>
+          <configuration>
+            <skip>true</skip>
+          </configuration>
+        </plugin>
+
       </plugins>
     </pluginManagement>
 
