--- a/step-1/pom.xml
+++ b/step-1/pom.xml
@@ -77,6 +77,14 @@
     </dependency>
     <!-- end::db-deps[] -->
 
+    <!-- tag::logger[] -->
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
+    <!-- end::logger[] -->
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
