Maven incremental compilation is broken
Symptom: you cannot run `mvn test` twice without `clean`.

It does not play well with apt, this is a well-known issue.

--- a/step-1/pom.xml
+++ b/step-1/pom.xml
@@ -107,6 +107,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
           </configuration>
         </plugin>
         <plugin>
