--- a/step-10/pom.xml
+++ b/step-10/pom.xml
@@ -130,6 +130,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
 
             <!-- Codegen -->
             <annotationProcessors>
