--- a/step-2/pom.xml
+++ b/step-2/pom.xml
@@ -100,6 +100,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
           </configuration>
         </plugin>
         <plugin>
