--- a/step-6/pom.xml
+++ b/step-6/pom.xml
@@ -116,6 +116,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
 
             <!-- Codegen -->
             <annotationProcessors>
