--- a/step-9/pom.xml
+++ b/step-9/pom.xml
@@ -132,6 +132,7 @@
           <configuration>
             <source>1.8</source>
             <target>1.8</target>
+            <useIncrementalCompilation>false</useIncrementalCompilation>
 
             <!-- Codegen -->
             <annotationProcessors>
