--- a/step-10/pom.xml
+++ b/step-10/pom.xml
@@ -27,7 +27,7 @@
   <version>1.1.0</version>
 
   <properties>
-    <vertx.version>3.5.0-SNAPSHOT</vertx.version>
+    <vertx.version>3.5.0</vertx.version>
     <main.verticle>io.vertx.guides.wiki.MainVerticle</main.verticle>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
