--- a/step-8/pom.xml
+++ b/step-8/pom.xml
@@ -53,7 +53,7 @@
     <!-- tag::vertx-rx-java[] -->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-rx-java</artifactId>
+      <artifactId>vertx-rx-java2</artifactId>
     </dependency>
     <!-- end::vertx-rx-java[] -->
     <dependency>
