--- a/step-1/pom.xml
+++ b/step-1/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>wiki-step-1</artifactId>
-  <version>1.2.0</version>
+  <version>1.3.0-SNAPSHOT</version>
 
   <properties>
     <vertx.version>3.5.1</vertx.version>
