Replacing Apache Shiro authentication by JDBC

--- a/step-7/pom.xml
+++ b/step-7/pom.xml
@@ -87,12 +87,12 @@
       <version>2.3.4</version>
     </dependency>
 
-    <!-- tag::shiro[] -->
+    <!--tag::jdbc-auth[] -->
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-auth-shiro</artifactId>
+      <artifactId>vertx-auth-jdbc</artifactId>
     </dependency>
-    <!-- end::shiro[] -->
+    <!--end::jdbc-auth[] -->
 
     <!-- tag::jwt[] -->
     <dependency>
