Transition step-8 to vertx-jdbc-auth

--- a/step-8/pom.xml
+++ b/step-8/pom.xml
@@ -95,7 +95,7 @@
 
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>vertx-auth-shiro</artifactId>
+      <artifactId>vertx-auth-jdbc</artifactId>
     </dependency>
 
     <dependency>
