--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,11 @@ addons:
     packages:
       - oracle-java8-installer
       - oracle-java9-installer
+      - oracle-java10-installer
 
 language: java
 
 jdk:
   - oraclejdk8
   - oraclejdk9
+  - oraclejdk10
