--- a/step-9/pom.xml
+++ b/step-9/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>wiki-step-9</artifactId>
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.3.1</version>
 
   <properties>
     <vertx.version>3.5.4</vertx.version>
