--- a/step-7/pom.xml
+++ b/step-7/pom.xml
@@ -24,10 +24,10 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>wiki-step-7</artifactId>
-  <version>1.4.0-SNAPSHOT</version>
+  <version>1.4.0</version>
 
   <properties>
-    <vertx.version>3.6.0-SNAPSHOT</vertx.version>
+    <vertx.version>3.6.0</vertx.version>
     <main.verticle>io.vertx.guides.wiki.MainVerticle</main.verticle>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
