--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>guide-for-java-devs</artifactId>
-  <version>1.4.0</version>
+  <version>1.5.0-SNAPSHOT</version>
 
   <packaging>pom</packaging>
 
