Fix compilation issues when upgrading to 4.0.0-SNAPSHOT
RxJava 2 code generation has moved to another module, hence it needs to
be used now.

See also https://github.com/vert-x3/vertx-rx/issues/177 that references
the breaking change in vertx-rx.

--- a/step-8/pom.xml
+++ b/step-8/pom.xml
@@ -55,6 +55,11 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-rx-java2</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-rx-java2-gen</artifactId>
+      <version>${vertx.version}</version>
+    </dependency>
     <!-- end::vertx-rx-java2[] -->
     <dependency>
       <groupId>io.vertx</groupId>
