--- a/step-3/pom.xml
+++ b/step-3/pom.xml
@@ -24,7 +24,7 @@
 
   <groupId>io.vertx</groupId>
   <artifactId>wiki-step-3</artifactId>
-  <version>1.5.0-SNAPSHOT</version>
+  <version>1.5.0</version>
 
   <properties>
     <vertx.version>3.8.0</vertx.version>
